--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -11,8 +11,8 @@ html, body {
 }
 
 body {
-  background-color: #0a0a0a;
-  color: #f5f5f5;
+  background-color: #343541;
+  color: #ececf1;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
